2014-12-28 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: boxplots: now, it sets 'mark=*' for outliers if there is no mark (compat=1.12)
	- fixed regression: compat=1.11 broke arcs inside of axis
	- new feature: ensured that arcs inside of axis make use of 'axis cs' and 'axis
	direction cs' automatically

2014-12-27 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- statistics lib: implemented support for 9 boxplot percentile estimators
	of R. Default as of compat=1.12 is R7 (the one used by Excel as well).
	- fixed bug: boxplots sometimes failed to compute boxplot statistics for special

2014-12-25 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed regression: pgfplots 1.11 was incompatible with pgf 2.10

2014-11-16 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: memory allocation in FPU consumed too much memory 

2014-10-11 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: axis equal did not respect "disabledatascaling"
	- fixed bug: mesh legend was confused by color input=explicit

2014-09-07 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- scalability: lualatex now reduces compilation time for huge 3d graphics 

2014-08-31 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- reduced TeX memory consumption for huge inline tables
	- improved space character robustness: now both 
		\pgfplotsforeachungrouped\x in{1,...,5}{a}
		\pgfplotsforeachungrouped\x in {1,...,5}{a}
		are accepted

2014-08-30 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug: 3d axes were all axes used log scale produced compile failure
	because 'current plot end' was undefined.

2014-08-06 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- RELEASED VERSION 1.11

2014-08-04 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed regression: hist/density was broken since some time
