@@ -71,6 +71,7 @@ DEV: scalability + performance
 - fixed bug: boxplots: now, it sets 'mark=*' for outliers if there is no mark (compat=1.12)
 - fixed regression: compat=1.11 broke arcs inside of axis
 - new feature: ensured that arcs inside of axis make use of 'axis cs' and 'axis direction cs' automatically
+- fixed bug: precision of transformation cartesian to polar was too low (added atan2 to fpu)
 
 1.11: usability + bug fixes.
 - new feature: "hide obscured x ticks=false" to disable the feature which hides ticks
