@@ -952,7 +952,9 @@ La.
 	fails to compile
 \end{bug}
 
-\begin{bug}
+\begin{bug}[closed]
+	ACCEPTED
+
 	the math function transformdirectionx is wrong (in the following context) if compat=1.11 is active, but the example used to work in compat=1.10
 \begin{verbatim}
 \documentclass{standalone}
