@@ -61,9 +61,10 @@
 		}%
 	}%
 
-\pgfutil@ifundefined{pgfmathdeclarepseudoconstant}{
+\pgfutil@ifundefined{pgfmathfloatatan2}{
 	\immediate\write16{Package pgfplots: loading complementary arithmetics for your pgf version...}
 	\input pgfplotsoldpgfsupp_pgflibraryfpu.code.tex
+	\input pgfplotsoldpgfsupp_pgfmathfloat.code.tex
 }
 {}%
 
