@@ -1180,29 +1180,7 @@
 	\let\pgfplots@y=\pgfmathresult
 	\pgfplotscoordmath{#5}{op}{veclen}{{\pgfplots@x}{\pgfplots@y}}%
 	\let\pgfplots@r=\pgfmathresult
-	\pgfplotscoordmath{#5}{if is}{\pgfplots@r}{0}{%
-		\pgfplotscoordmath{#5}{parsenumber}{0}%
-	}{%
-		\pgfplotscoordmath{#5}{op}{divide}{{\pgfplots@x}{\pgfplots@r}}%
-		\let\pgfplots@quot=\pgfmathresult
-		%
-		\pgfplotscoordmath{#5}{one}%
-		\let\pgfplots@loc@TMPc=\pgfmathresult
-		\pgfplotscoordmath{#5}{min}{\pgfplots@quot}{\pgfplots@loc@TMPc}%
-		\let\pgfplots@quot=\pgfmathresult
-		\pgfplotscoordmath{#5}{-one}%
-		\let\pgfplots@loc@TMPc=\pgfmathresult
-		\pgfplotscoordmath{#5}{max}{\pgfplots@quot}{\pgfplots@loc@TMPc}%
-		\let\pgfplots@quot=\pgfmathresult
-		%
-		\pgfplotscoordmath{#5}{op}{acos}{{\pgfplots@quot}}%
-		%
-		\pgfplotscoordmath{#5}{if is}{\pgfplots@y}{-}{%
-			\let\pgfplots@acos=\pgfmathresult
-			\pgfplotscoordmath{#5}{-one}%
-			\pgfplotscoordmath{#5}{op}{multiply}{{\pgfmathresult}{\pgfplots@acos}}%
-		}{}%
-	}%
+	\pgfplotscoordmath{#5}{op}{atan2}{{\pgfplots@y}{\pgfplots@x}}%
 	\let\pgfplots@deg=\pgfmathresult
 	\xdef\pgfplots@glob@TMPa{\noexpand\def\noexpand#3{\pgfplots@deg}\noexpand\def\noexpand#4{\pgfplots@r}}%
 	\endgroup
