@@ -4,6 +4,7 @@
 	- fixed regression: compat=1.11 broke arcs inside of axis
 	- new feature: ensured that arcs inside of axis make use of 'axis cs' and 'axis
 	direction cs' automatically
+	- fixed bug: precision of transformation cartesian to polar was too low (added atan2 to fpu)
 
 2014-12-27 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
